# mtasr_examples_cpp

./: CMakeLists.txt  README.md
cmake/: boost.cmake  gflags.cmake  glog.cmake  grpc.cmake  openfst.cmake
docker/: Dockerfile
frontend/: wav.h
grpc/: CMakeLists.txt  asr.grpc.pb.cc  asr.grpc.pb.h  asr.pb.cc  asr.pb.h  asr.proto  grpc_client.cc  grpc_client.h
lib/: README.md
utils/: CMakeLists.txt  flags.h  log.h  string.cc  string.h  utils.cc  utils.h
websocket/: CMakeLists.txt  websocket_client.cc  websocket_client.h
